--- a/css/style.css
+++ b/css/style.css
@@ -44,5 +44,9 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
   }
+  .card {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 /*# sourceMappingURL=style.css.map */
